--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
 /[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)] <html class="no-js" lang="en">
 %head
   %meta{:charset => "utf-8"}/
-  %title Open Your Project
+  %title= Env['SITE_NAME']
 
   / Viewport slides: http://t.co/dKP3o1e
   %meta{:content => "True", :name => "HandheldFriendly"}/
