--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -75,17 +75,9 @@
 
 
   %footer
-    Free software for the open curation of the
-    -# %a{:href => 'http://creativecommons.org/about'}
-    Creative Commons.&nbsp;
-
-    An
-    %a{:href => 'http://enlightenedstructure.org/Software_Zero/'} Enlightened Structure Software Zero
-    project,
-
-    powered by
+    Powered by
     = succeed "," do
-      %a{:href => 'http://fed.wiki.org/view/welcome-visitors/view/smallest-federated-wiki'} Smallest Federated Wiki
+      %a{:href => 'http://enlightenedstructure.org/Software_Zero/'} Enlightened Structure Software Zero
 
     responsive design by
     = succeed "." do
