--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,6 @@
 <div id="wiki-wrapper" class="edit">
 <div id="head">
-  <h1>Editing <strong><%= @slug %></strong></h1>
+  <h1>Editing <strong><%= @title %></strong></h1>
   <ul class="actions">
     <li class="minibutton"><a href="/<%= @slug %>" class="action-view-page">View Page</a></li>
   </ul>
