--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -5,7 +5,7 @@
     <li class="minibutton"><a href="/<%= @slug %>" class="action-view-page">View Page</a></li>
   </ul>
 </div>
-  <div id="wiki-content"><%= render 'editor.mustache', :mustache => @editor %></div>
+  <div id="wiki-content"><%= render 'editor', :handlers => [:mustache], :mustache => @editor %></div>
 </div>
 <script type="text/javascript">
 jQuery(document).ready(function() {
