--- a/app/assets/stylesheets/octopress/custom/_styles.scss
+++ b/app/assets/stylesheets/octopress/custom/_styles.scss
@@ -1,2 +1,14 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+body > header {
+  cursor: pointer;
+}
+
+header > hgroup > h1 {
+  color: white;
+}
+
+a {
+  color: #919 !important;
+}
