--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,8 @@
  *
  *= require_self
 
- *= require bootstrap/bootstrap
- *= require bootstrap/bootstrap-responsive
+ *=# require bootstrap/bootstrap
+ *=# require bootstrap/bootstrap-responsive
 
  *= require gollum/gollum
  *= require gollum/editor
