--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,8 @@
  *
  *= require_self
 
+ *= require font-awesome
+
  *=# require bootstrap/bootstrap
  *=# require bootstrap/bootstrap-responsive
 
