--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -1,3 +1,19 @@
-.row
+.row.apps
   - @collections.each do |name, attrs|
     = render :partial => 'summary', :locals => { :name => name, :attrs => attrs }
+
+
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
