Remove remix link

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Remix This', edit_page_path(:id => @page_id) if Env['CREATE_PAGES'] %>
+<%#= link_to 'Remix This', edit_page_path(:id => @page_id) if Env['CREATE_PAGES'] %>
 
 <%= @page_html.html_safe %>
 
