Simplify styling - use float left for app icons, not parts of Bootstrap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
 
  *= require font-awesome
 
- *= require bootstrap/bootstrap-responsive-custom-minimal
+ *#=# require bootstrap/bootstrap-responsive-custom-minimal
 
  *= require gollum/gollum
  *= require gollum/editor
