--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -1,4 +1,4 @@
-.row.apps
+.apps
   - @collections.each do |name, attrs|
     = render :partial => 'summary', :locals => { :name => name, :attrs => attrs }
 
