Show page title on show and edit pages; tweak download verbiage

--- a/app/assets/stylesheets/gollum/gollum.css
+++ b/app/assets/stylesheets/gollum/gollum.css
@@ -42,9 +42,9 @@ a:hover, a:visited {
   overflow: hidden;
 }
 
-  #head h1 {
-     display: none;
-  }
+  /*#head h1 {*/
+     /*display: none;*/
+  /*}*/
 
   #head ul.actions {
     float: right;
