--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,9 +1,9 @@
 <div id="wiki-wrapper" class="edit">
 <div id="head">
   <h1>Editing <strong><%= @title %></strong></h1>
-  <ul class="actions">
-    <li class="minibutton"><a href="/<%= @slug %>" class="action-view-page">View Page</a></li>
-  </ul>
+  <!--<ul class="actions">-->
+    <!--<li class="minibutton"><a href="/<%= @slug %>" class="action-view-page">View Page</a></li>-->
+  <!--</ul>-->
 </div>
   <div id="wiki-content">
     <%= render 'editor', :handlers => [:mustache], :mustache => @editor %>
