--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,6 +1,6 @@
 <div id="wiki-wrapper" class="edit">
 <div id="head">
-  <h1>Create New Page</h1>
+  <h1>Create New <%= Env['COLLECTION_LABEL'] %></h1>
 </div>
   <div id="wiki-content" class="create edit">
     <div class="has-rightbar">
