Allow routes with origin domain via SZ domain, eg: alchemyofchange.net.via.forkdiffmerge.org/radical-connectedness

--- a/app/views/forked_pages/new.html.haml
+++ b/app/views/forked_pages/new.html.haml
@@ -4,7 +4,7 @@
     %ul
       - @recent_changes.each do |recent_change|
         %li
-          %a{:href => "http://#{recent_change['collection']}.on.#{request.domain}#{request.port_string}/#{recent_change['slug']}"}= "#{recent_change['collection']}/#{recent_change['slug']}"
+          %a{:href => "http://#{recent_change['collection']}.via.#{request.domain}#{request.port_string}/#{recent_change['slug']}"}= "#{recent_change['collection']}/#{recent_change['slug']}"
 
 %ul.overview
   %li
