--- a/app/views/forked_pages/new.html.haml
+++ b/app/views/forked_pages/new.html.haml
@@ -1,8 +1,9 @@
 %ul.overview
   %li
     &raquo;
-    Transfer any Creative Commons licensed project
-    into the Federated Wiki collaboration framework
+    Copy any Creative Commons licensed page
+    into an open collaboration framework
+    %span.more= link_to "more info", 'https://help.github.com/articles/fork-a-repo', :target => '_blank'
   %li
     &raquo;
     Others can copy the project,
