Show sidebar only on "home" page

--- a/app/views/forked_pages/new.html.haml
+++ b/app/views/forked_pages/new.html.haml
@@ -1,3 +1,11 @@
+- content_for :sidebar do
+  %section
+    %h1 Recent Changes
+    %ul
+      - @recent_changes.each do |recent_change|
+        %li
+          %a{:href => "http://#{recent_change['collection']}.on.#{request.domain}#{request.port_string}/#{recent_change['slug']}"}= "#{recent_change['collection']}/#{recent_change['slug']}"
+
 %ul.overview
   %li
     &raquo;
