--- a/app/views/collections/_summary.html.haml
+++ b/app/views/collections/_summary.html.haml
@@ -1,7 +1,6 @@
-- port = request.port == 80 ? '' : ":#{request.port}"
 - subdomain = attrs['subdomain'] || raise("No subdomain found for #{name}")
-- home_page = attrs['home_page'] || raise("No home page found for #{name}")
-- link = "#{request.protocol}#{subdomain}.#{Env['BASE_DOMAIN']}#{port}/#{home_page}"
+- home_page = attrs['home_page'] || Env['HOME_SLUG'] || raise("No home page found for #{name}")
+- link = "#{request.protocol}#{subdomain}.#{Env['BASE_DOMAIN']}#{request.port_string}/#{home_page}"
 - icon_name = attrs['icon'] || raise("No icon found for #{name}")
 
 .app
