Only show "content from domain x" message if we are at a domain.via.our.server style URL

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,10 +1,12 @@
 <%#= link_to 'Remix This', edit_page_path(:id => @page_id) if Env['CREATE_PAGES'] %>
 
-<div class="origin_message">
-  <%= @origin_message %>
-  &bull;
-  <%= @fork_this %>
-</div>
+<% if @origin_message %>
+  <div class="origin_message">
+    <%= @origin_message %>
+    &bull;
+    <%= @fork_this %>
+  </div>
+<% end %>
 
 <%= @page_html.html_safe %>
 
